--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2898,6 +2898,32 @@
 		background-position: top left, center center;
 	}
 
+/* Three */
+
+	#three {
+		background: url("images/overlay.png"), url("../../images/three.jpg");
+		background-size: 256px 256px, cover;
+		background-attachment: fixed, fixed;
+		background-position: top left, center center;
+	}
+	
+/* Four */
+
+	#four {
+		background: url("images/overlay.png"), url("../../images/four.jpg");
+		background-size: 256px 256px, cover;
+		background-attachment: fixed, fixed;
+		background-position: top left, center center;
+	}
+
+/* Five */
+
+	#five {
+		background: url("images/overlay.png"), url("../../images/five.jpg");
+		background-size: 256px 256px, cover;
+		background-attachment: fixed, fixed;
+		background-position: top left, center center;
+	}
 /* Work */
 
 	#work .row.images .image {
