--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2960,6 +2960,43 @@
 		#work .row.images.inactive .image.from-bottom {
 			top: 7em;
 		}
+		
+/* usage */
+
+	#usage .row.images .image {
+		-moz-transition: all 1s ease;
+		-webkit-transition: all 1s ease;
+		-ms-transition: all 1s ease;
+		transition: all 1s ease;
+		-moz-transform: translateZ(0);
+		-webkit-transform: translateZ(0);
+		-ms-transform: translateZ(0);
+		transform: translateZ(0);
+		position: relative;
+		top: 0;
+		left: 0;
+		opacity: 1.0;
+	}
+
+	#usage .row.images.inactive .image {
+		opacity: 0;
+	}
+
+		#usage .row.images.inactive .image.from-left {
+			left: -14em;
+		}
+
+		#usage .row.images.inactive .image.from-right {
+			left: 14em;
+		}
+
+		#usage .row.images.inactive .image.from-top {
+			top: -7em;
+		}
+
+		#usage .row.images.inactive .image.from-bottom {
+			top: 7em;
+		}
 
 /* Contact */
 
