--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2924,6 +2924,24 @@
 		background-attachment: fixed, fixed;
 		background-position: top left, center center;
 	}
+	
+/* Six */
+
+	#six {
+		background: url("images/overlay.png"), url("../../images/six.jpg");
+		background-size: 256px 256px, cover;
+		background-attachment: fixed, fixed;
+		background-position: top left, center center;
+	}
+	
+/* Seven */
+
+	#seven {
+		background: url("images/overlay.png"), url("../../images/seven.jpg");
+		background-size: 256px 256px, cover;
+		background-attachment: fixed, fixed;
+		background-position: top left, center center;
+	}
 /* Work */
 
 	#work .row.images .image {
